cbits/Bullet.h

void* btCollisionAlgorithmCreateFunc_new(); //constructor: btCollisionAlgorithmCreateFunc  ( ::btCollisionAlgorithmCreateFunc::* )(  ) 
void btCollisionAlgorithmCreateFunc_free(void *c);
 
void* btCollisionAlgorithmCreateFunc_CreateCollisionAlgorithm(void *c,void* p0,void* p1,void* p2); //method: CreateCollisionAlgorithm ::btCollisionAlgorithm * ( ::btCollisionAlgorithmCreateFunc::* )( ::btCollisionAlgorithmConstructionInfo &,::btCollisionObject *,::btCollisionObject * ) 
void btCollisionAlgorithmCreateFunc_m_swapped_set(void *c,int a); //attribute: bool btCollisionAlgorithmCreateFunc->m_swapped
int btCollisionAlgorithmCreateFunc_m_swapped_get(void *c); //attribute: bool btCollisionAlgorithmCreateFunc->m_swapped
//not supported method: getPersistentManifoldPool ::btPoolAllocator * ( ::btCollisionConfiguration::* )(  ) 
// error:  - unsupported

void* btCollisionConfiguration_getStackAllocator(void *c); //method: getStackAllocator ::btStackAlloc * ( ::btCollisionConfiguration::* )(  ) 
//not supported method: getCollisionAlgorithmPool ::btPoolAllocator * ( ::btCollisionConfiguration::* )(  ) 
// error:  - unsupported

void* btCollisionConfiguration_getCollisionAlgorithmCreateFunc(void *c,int p0,int p1); //method: getCollisionAlgorithmCreateFunc ::btCollisionAlgorithmCreateFunc * ( ::btCollisionConfiguration::* )( int,int ) 
void* btCollisionDispatcher_new(void* p0); //constructor: btCollisionDispatcher  ( ::btCollisionDispatcher::* )( ::btCollisionConfiguration * ) 
void btCollisionDispatcher_free(void *c);
 
void* btCollisionDispatcher_allocateCollisionAlgorithm(void *c,int p0); //method: allocateCollisionAlgorithm void * ( ::btCollisionDispatcher::* )( int ) 
int btCollisionDispatcher_getDispatcherFlags(void *c); //method: getDispatcherFlags int ( ::btCollisionDispatcher::* )(  ) const
void* btCollisionDispatcher_getCollisionConfiguration(void *c); //method: getCollisionConfiguration ::btCollisionConfiguration * ( ::btCollisionDispatcher::* )(  ) 
void* btCollisionDispatcher_getCollisionConfiguration0(void *c); //method: getCollisionConfiguration ::btCollisionConfiguration * ( ::btCollisionDispatcher::* )(  ) 
void* btCollisionDispatcher_getCollisionConfiguration1(void *c); //method: getCollisionConfiguration ::btCollisionConfiguration const * ( ::btCollisionDispatcher::* )(  ) const
void btCollisionDispatcher_setDispatcherFlags(void *c,int p0); //method: setDispatcherFlags void ( ::btCollisionDispatcher::* )( int ) 
void btCollisionDispatcher_releaseManifold(void *c,void* p0); //method: releaseManifold void ( ::btCollisionDispatcher::* )( ::btPersistentManifold * ) 
void btCollisionDispatcher_setCollisionConfiguration(void *c,void* p0); //method: setCollisionConfiguration void ( ::btCollisionDispatcher::* )( ::btCollisionConfiguration * ) 
int btCollisionDispatcher_getNumManifolds(void *c); //method: getNumManifolds int ( ::btCollisionDispatcher::* )(  ) const
void btCollisionDispatcher_clearManifold(void *c,void* p0); //method: clearManifold void ( ::btCollisionDispatcher::* )( ::btPersistentManifold * ) 
void btCollisionDispatcher_freeCollisionAlgorithm(void *c,void* p0); //method: freeCollisionAlgorithm void ( ::btCollisionDispatcher::* )( void * ) 
//not supported method: getInternalManifoldPointer ::btPersistentManifold * * ( ::btCollisionDispatcher::* )(  ) 
// error:  - unsupported

void btCollisionDispatcher_registerCollisionCreateFunc(void *c,int p0,int p1,void* p2); //method: registerCollisionCreateFunc void ( ::btCollisionDispatcher::* )( int,int,::btCollisionAlgorithmCreateFunc * ) 
void btCollisionDispatcher_defaultNearCallback(void* p0,void* p1,void* p2); //method: defaultNearCallback void (*)( ::btBroadphasePair &,::btCollisionDispatcher &,::btDispatcherInfo const & )
//not supported method: getNearCallback ::btNearCallback ( ::btCollisionDispatcher::* )(  ) const
// error:  - unsupported

void* btCollisionDispatcher_findAlgorithm(void *c,void* p0,void* p1,void* p2); //method: findAlgorithm ::btCollisionAlgorithm * ( ::btCollisionDispatcher::* )( ::btCollisionObject *,::btCollisionObject *,::btPersistentManifold * ) 
int btCollisionDispatcher_needsResponse(void *c,void* p0,void* p1); //method: needsResponse bool ( ::btCollisionDispatcher::* )( ::btCollisionObject *,::btCollisionObject * ) 