Physics/Bullet/Raw/BulletCollision/CollisionDispatch.chs

-- * btActivatingCollisionAlgorithm
-- * btCollisionAlgorithmCreateFunc
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionCreateFunc.h?r=2223#30>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionCreateFunc.cpp?r=2223>
-}
{#fun btCollisionAlgorithmCreateFunc_new as btCollisionAlgorithmCreateFunc    {  } -> `BtCollisionAlgorithmCreateFunc' mkBtCollisionAlgorithmCreateFunc* #}
{#fun btCollisionAlgorithmCreateFunc_free    `( BtCollisionAlgorithmCreateFuncClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionCreateFunc.h?r=2223#36>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionCreateFunc.cpp?r=2223>
-}
{#fun btCollisionAlgorithmCreateFunc_CreateCollisionAlgorithm as btCollisionAlgorithmCreateFunc_CreateCollisionAlgorithm    `( BtCollisionAlgorithmCreateFuncClass bc , BtCollisionAlgorithmConstructionInfoClass p0 , BtCollisionObjectClass p1 , BtCollisionObjectClass p2 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ arg0
, withBt* `p1'  -- ^ body0
, withBt* `p2'  -- ^ body1
 } ->  `BtCollisionAlgorithm'  mkBtCollisionAlgorithm* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionCreateFunc.h?r=2223#28>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionCreateFunc.cpp?r=2223>
-}
{#fun btCollisionAlgorithmCreateFunc_m_swapped_set    `( BtCollisionAlgorithmCreateFuncClass bc )' =>     { withBt* `bc' ,  `Bool'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionCreateFunc.h?r=2223#28>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionCreateFunc.cpp?r=2223>
-}
{#fun btCollisionAlgorithmCreateFunc_m_swapped_get    `( BtCollisionAlgorithmCreateFuncClass bc )' =>     { withBt* `bc'  } ->  `Bool'   #}
-- * btCollisionConfiguration
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionConfiguration.h?r=2223#41>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionConfiguration.cpp?r=2223>
-}
{#fun btCollisionConfiguration_getStackAllocator as btCollisionConfiguration_getStackAllocator    `( BtCollisionConfigurationClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtStackAlloc'  mkBtStackAlloc* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionConfiguration.h?r=2223#43>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionConfiguration.cpp?r=2223>
-}
{#fun btCollisionConfiguration_getCollisionAlgorithmCreateFunc as btCollisionConfiguration_getCollisionAlgorithmCreateFunc    `( BtCollisionConfigurationClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ proxyType0
,  `Int'  -- ^ proxyType1
 } ->  `BtCollisionAlgorithmCreateFunc'  mkBtCollisionAlgorithmCreateFunc* #}
-- * btCollisionDispatcher
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#107>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_new as btCollisionDispatcher    `( BtCollisionConfigurationClass p0 )' =>     {  withBt* `p0'  } -> `BtCollisionDispatcher' mkBtCollisionDispatcher* #}
{#fun btCollisionDispatcher_free    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#140>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_allocateCollisionAlgorithm as btCollisionDispatcher_allocateCollisionAlgorithm    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ size
 } ->  `VoidPtr'  mkVoidPtr* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#74>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_getDispatcherFlags as btCollisionDispatcher_getDispatcherFlags    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#144>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_getCollisionConfiguration0 as btCollisionDispatcher_getCollisionConfiguration    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtCollisionConfiguration'  mkBtCollisionConfiguration* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#144>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_getCollisionConfiguration0 as btCollisionDispatcher_getCollisionConfiguration0    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtCollisionConfiguration'  mkBtCollisionConfiguration* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#149>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_getCollisionConfiguration1 as btCollisionDispatcher_getCollisionConfiguration1    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `BtCollisionConfiguration'  mkBtCollisionConfiguration* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#79>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_setDispatcherFlags as btCollisionDispatcher_setDispatcherFlags    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ flags
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#113>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_releaseManifold as btCollisionDispatcher_releaseManifold    `( BtCollisionDispatcherClass bc , BtPersistentManifoldClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ manifold
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#154>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_setCollisionConfiguration as btCollisionDispatcher_setCollisionConfiguration    `( BtCollisionDispatcherClass bc , BtCollisionConfigurationClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ config
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#87>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_getNumManifolds as btCollisionDispatcher_getNumManifolds    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#116>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_clearManifold as btCollisionDispatcher_clearManifold    `( BtCollisionDispatcherClass bc , BtPersistentManifoldClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ manifold
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#142>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_freeCollisionAlgorithm as btCollisionDispatcher_freeCollisionAlgorithm    `( BtCollisionDispatcherClass bc )' =>     { withBt* `bc'  -- ^ 
, withVoidPtr* `VoidPtr'  -- ^ ptr
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#85>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_registerCollisionCreateFunc as btCollisionDispatcher_registerCollisionCreateFunc    `( BtCollisionDispatcherClass bc , BtCollisionAlgorithmCreateFuncClass p2 )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ proxyType0
,  `Int'  -- ^ proxyType1
, withBt* `p2'  -- ^ createFunc
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#138>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_defaultNearCallback as btCollisionDispatcher_defaultNearCallback    `(  BtBroadphasePairClass p0 , BtCollisionDispatcherClass p1 , BtDispatcherInfoClass p2 )' =>     {  withBt* `p0'  -- ^ collisionPair
, withBt* `p1'  -- ^ dispatcher
, withBt* `p2'  -- ^ dispatchInfo
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#119>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_findAlgorithm as btCollisionDispatcher_findAlgorithm    `( BtCollisionDispatcherClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 , BtPersistentManifoldClass p2 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
, withBt* `p2'  -- ^ sharedManifold
 } ->  `BtCollisionAlgorithm'  mkBtCollisionAlgorithm* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#123>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
{#fun btCollisionDispatcher_needsResponse as btCollisionDispatcher_needsResponse    `( BtCollisionDispatcherClass bc , BtCollisionObjectClass p0 , BtCollisionObjectClass p1 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ body0
, withBt* `p1'  -- ^ body1
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.h?r=2223#111>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/CollisionDispatch/btCollisionDispatcher.cpp?r=2223>
-}
